# BitcoinAlphaBacktester

./: .coverage  .gitignore  .replit  CODEBASE_CLEANUP.md  DATA_MAINTENANCE.md  GITHUB_ACTIONS_SCREENSHOTS.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  README.md  README.md_new  REPO_RULES.md  STREAMLIT_DEPLOYMENT_GUIDE.md  app.py  app.py.bak  data_fetcher.py  domain.py  fee_models.py  fetch_bitcoin_data.py  friendly_dashboard.py  generate_sample_optimizations.py  github_setup.sh  metrics.py  optimize_app.py  optimize_strategies.py  pyproject.toml  requirements.txt  run_optimizations.py  run_tests.py  story_dashboard.py  strategies.py  strategies_new.py  strategy_story.py  test_data_fetcher.py  test_domain.py  test_fee_models.py  ui_components.py  visualizations.py
.github/workflows/: update_bitcoin_data.yml
.streamlit/: config.toml  custom.css
attached_assets/: Pasted--23-48-21-Starting-up-repository-bitcoinalphabacktester-branch-main-main-module-app-py-1746834664990.txt
data/: bitcoin_prices.arrow  bitcoin_prices_usd.arrow  exchange_fees.json  last_verification.json
scripts/: fetch_10yr_bitcoin_data.py  fetch_cryptocompare_data.py  generate_optimizations_for_periods.py  generate_sample_optimizations.py  run_all_optimizations.py  run_real_optimizations.py  verify_data_integrity.py
tests/: test_app.py  test_data_fetcher.py  test_fetch_bitcoin_data.py  test_metrics.py  test_optimize_app.py  test_run_selected_strategies.py  test_strategies.py  test_strategy_story.py  test_ui_components.py  test_visualizations.py
(+26 files in other folders)
