[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scikit-optimize>=0.10.2",
    "streamlit>=1.45.0",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.0",
]
